Fixed a bug in csaw UG.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@1942 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -783,7 +783,7 @@ If any DB regions should survive trimming (e.g., those with less extreme fold ch
 In fact, users may wish to explicitly filter out such bins and run TMM only on putative background regions, as shown below.
 
 <<>>=
-ab <- avelogCPM(asDGEList(binned))
+ab <- aveLogCPM(asDGEList(binned))
 keep <- ab <= quantile(ab, p=0.9)
 normalize(binned[keep,])
 @
