--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -339,3 +339,14 @@
    Month="Feb"
 }
 
+@incollection{chen2014,
+	author = {Chen, Y. and Lun, A. T. L. and Smyth, G. K.},
+	year = 2014,
+	title = {Differential expression analysis of complex {R}{N}{A}-seq experiments using edge{R}},
+	booktitle = {Statistical Analysis of Next Generation Sequence Data},
+	editor = {Datta, S. and Nettleton, D. S.},
+	publisher = {Springer},
+	address = {New York}
+}
+
+
